<resources>
    <string name="app_name">AppAndroidExemplo</string>
    <string name="link_login">Já tem uma conta? Clique aqui para entrar!</string>
    <string name="status_contador">O contador está em</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_cadastro">Crie sua conta!</string>
    <string name="botao_contador">Contador!</string>
    <string name="botao_login">Login</string>
    <string name="campo_email_hint">Email</string>
    <string name="campo_senha_hint">Senha</string>
    <string name="titulo_feed">Seu feed de postagens</string>
    <string name="erro_email_indisponivel">Esse email está indisponível!</string>
    <string name="erro_credenciais_incorretas">Credenciais incorretas!</string>
    <string name="aviso_email_nao_validado">Seu email ainda não foi validado. Verifique sua caixa de entrada do email pelo link de validação.</string>
</resources>